--- a/css/general.css
+++ b/css/general.css
@@ -9,13 +9,22 @@ a:focus, button:focus { color: #000; }
 
 .green { color: #87a43b; }
 
-#menu { margin-top: 12px; }
-@media (min-width: 768px) { #menu { padding: 0; } }
-#menu .logo { height: 1.5rem; }
-#menu .nav-link { position: relative; padding: 1.4rem 1rem 1rem; }
-#menu .nav-link.active { color: #87a43b; }
-#menu .nav-link.active::before { content: ""; position: absolute; display: block; height: 2px; width: 100%; top: 0; left: 0; right: 0; background-color: #7aa52c; }
+#menu.bg-light { background-color: #fff !important; }
+#menu.bg-light .navbar-collapse .nav-link { color: #2d2f2a; }
+#menu.bg-light .logo { display: block; }
+#menu.bg-light .logo-negative { display: none; }
+@media (min-width: 768px) { #menu { margin-top: 12px; padding: 0; } }
+#menu .logo { display: none; }
+#menu .logo-negative { display: block; }
+#menu .logo, #menu .logo-negative { height: 1.5rem; }
+@media (max-width: 575.98px) { #menu .navbar-collapse { height: 100vh; } }
+#menu .navbar-collapse .nav-link { color: #fff; position: relative; padding: 1.4rem 1rem 1rem; }
+@media (max-width: 575.98px) { #menu .navbar-collapse .nav-link { border: 1px solid #fff; } }
+#menu .navbar-collapse .nav-link.active { color: #87a43b; }
+@media (max-width: 575.98px) { #menu .navbar-collapse .nav-link.active { border-color: #7aa52c; } }
+@media (min-width: 768px) { #menu .navbar-collapse .nav-link.active::before { content: ""; position: absolute; display: block; height: 2px; width: 100%; top: 0; left: 0; right: 0; background-color: #7aa52c; } }
 #menu .btn-special { font-weight: 500; text-decoration: none; }
+@media (max-width: 575.98px) { #menu .btn-special { margin-top: 3rem; padding: 1.4rem 1rem 1rem; position: absolute; } }
 
 a .img-fluid { -webkit-transition: all .5s ease-out; transition: all .5s ease-out; }
 
@@ -39,12 +48,13 @@ section#inicio .owl-stage-outer, section#inicio .owl-stage, section#inicio .owl-
 section#inicio .sub-title { color: #fff; font-size: 3rem; font-weight: 700; line-height: 1; width: 33%; }
 @media (max-width: 575.98px) { section#inicio .sub-title { width: 90%; } }
 section#nosotros { background-image: url("../img/mapa.jpg"); background-position: left center; background-size: auto 90%; }
-section#nosotros .title { margin-bottom: 2rem; }
+section#nosotros .title { margin-top: 3rem; margin-bottom: 2rem; }
 @media (min-width: 768px) { section#nosotros .txt { margin-left: 6rem; } }
-section#nosotros .deco { width: 58%; height: 15rem; background-position: center; background-size: cover; background-repeat: no-repeat; border-top-left-radius: 10rem; border-bottom-left-radius: 10rem; }
-@media (max-width: 575.98px) { section#nosotros .deco { width: 95%; } }
-section#servicios .servicios .col-12:nth-child(2) { margin-top: 1rem; }
-section#servicios .servicios .col-12:nth-child(3) { margin-top: -1rem; }
+section#nosotros .deco { width: 70%; height: 24rem; background-position: center; background-size: cover; background-repeat: no-repeat; border-top-left-radius: 15rem; border-bottom-left-radius: 15rem; }
+@media (max-width: 575.98px) { section#nosotros .deco { width: 95%; height: 15rem; } }
+@media (min-width: 768px) { section#servicios .servicios .col-12:nth-child(2) { margin-top: 1rem; }
+  section#servicios .servicios .col-12:nth-child(3) { margin-top: -1rem; } }
+@media (max-width: 575.98px) { section#servicios .servicios .col-12 { margin-top: 1rem; } }
 section#servicios .box { padding: 2rem 1.5rem; border-radius: .8rem; margin-bottom: 1.25rem; background-color: #fff; position: relative; text-decoration: none; display: block; -webkit-transition: background-color .5s ease-out; transition: background-color .5s ease-out; }
 section#servicios .box .mini-title { color: #87a43b; font-weight: 500; margin-top: 14px; -webkit-transition: color .5s ease-out; transition: color .5s ease-out; }
 section#servicios .box .link { height: 0; opacity: 0; -webkit-transition: opacity .2s ease-out; transition: opacity .2s ease-out; }
@@ -55,7 +65,8 @@ section#servicios .box .deco::after { content: ""; display: block; width: .6rem;
 section#servicios .box:hover { color: #fff; background-color: #7aa52c; }
 section#servicios .box:hover .mini-title { color: #fff; margin-top: 0; }
 section#servicios .box:hover .link { height: auto; opacity: 1; }
-section#informacion { background-image: url("../img/capa-fondo.jpg"); padding-top: 31rem; background-position: top center; }
+section#informacion { background-image: url("../img/capa-fondo.jpg"); padding-top: 31rem; background-position: 50% -8rem; }
+@media (max-width: 575.98px) { section#informacion { padding-top: 13rem; background-position: 50% -9rem; } }
 section#informacion .green { color: #7aa52c; }
 section#informacion .box { padding: 3.5rem 2rem; border-radius: .8rem; margin-bottom: 1.25rem; background-color: #fff; }
 section#informacion .box .num { position: relative; }
@@ -89,6 +100,24 @@ section#testimonios .testimonios .owl-item .box { padding: 3rem 4.5rem; backgrou
 @media (max-width: 575.98px) { section#testimonios .testimonios .owl-item .box { padding: 3rem 2rem; } }
 section#testimonios .testimonios .owl-item .box .avatar { border-radius: 10rem; width: 7rem; height: 7rem; margin-bottom: 1rem; background-position: center; background-size: cover; background-repeat: no-repeat; }
 section#testimonios .testimonios .owl-item.active .box { opacity: 1; -webkit-filter: blur(0px); filter: blur(0px); }
+section#sobre-nosotros { height: 40vh; padding: 0; }
+section#sobre-nosotros .btn-circle { color: #fff; background-color: #7aa52c; border-radius: 10rem; bottom: -2.25rem; font-size: 2rem; width: 4.5rem; height: 4.5rem; padding: 0; left: 0; right: 0; }
+@media (max-width: 575.98px) { section#sobre-nosotros .btn-circle { bottom: -1.5rem; font-size: 1rem; width: 3rem; height: 3rem; } }
+section#sobre-nosotros .btn-circle:hover { color: #000; }
+section#sobre-nosotros .title { color: #fff; }
+section#sobre-nosotros .title small { display: block; font-size: 50%; }
+section#sobre-nosotros .container { height: 100%; }
+section#inspiracion { padding: 6rem 0; }
+section#nuestra-historia { background-position: center bottom; background-size: contain; padding: 0 0 6rem; }
+section#nuestra-historia .contenedor { overflow: hidden; }
+section#nuestra-historia .contenedor .img { width: 100%; }
+@media (max-width: 575.98px) { section#nuestra-historia .contenedor .img { width: 300%; } }
+section#nuestra-historia .logo { margin-bottom: 1.5rem; }
+section#nuestra-historia .cont { margin-bottom: 3rem; }
+section#nuestra-historia .mini-title { position: relative; margin-bottom: 1rem; }
+section#nuestra-historia .mini-title::after { content: ""; position: absolute; background-color: #7aa52c; height: 2px; width: 25%; margin: 0 auto; bottom: 2px; left: 0; right: 0; }
+section#nuestra-historia .box { padding: 3.5rem 2rem; border-radius: .8rem; margin-bottom: 1.25rem; background-color: #fff; }
+section#nuestro-valor { background-color: #efefef; padding: 6rem 0; }
 
 #contacto { font-size: .8rem; padding-top: 5rem; padding-bottom: 18rem; background-position: center bottom; background-size: 100% auto; background-repeat: no-repeat; }
 @media (max-width: 575.98px) { #contacto { padding-top: 3rem; padding-bottom: 4rem; } }
