--- a/css/general.scss
+++ b/css/general.scss
@@ -25,35 +25,72 @@ a,button{
 .green{
 	color: $verde-txt;
 }
-#menu{
-	margin-top: 12px;
+#menu{	
+	&.bg-light{
+		background-color: $white!important;
+		.navbar-collapse .nav-link{
+			color: $gris-txt;
+		}
+		.logo{
+			display: block;
+		}
+		.logo-negative{
+			display: none;
+		}
+	}
 	@include media-breakpoint-up(md) {
+		margin-top: 12px;
 		padding: 0;
 	}
 	.logo{
+		display: none;
+	}
+	.logo-negative{
+		display: block;
+	}
+	.logo,.logo-negative{
 		height: 1.5rem;
 	}
-	.nav-link{
-		position: relative;
-		padding: 1.4rem 1rem 1rem;
-		&.active{
-			color: $verde-txt;
-			&::before{
-				content: "";
-				position: absolute;
-				display: block;
-				height: 2px;
-				width: 100%;
-				top: 0;
-				left: 0;
-				right: 0;
-				background-color: $verde-bg;
+	.navbar-collapse{
+		@include media-breakpoint-between(xs,sm) {
+			height: 100vh;
+		}
+		.nav-link{
+			color: $white;
+			position: relative;
+			padding: 1.4rem 1rem 1rem;
+			@include media-breakpoint-between(xs,sm) {
+				border: 1px solid $white;
+			}
+			&.active{
+				color: $verde-txt;
+				@include media-breakpoint-between(xs,sm) {
+					border-color: $verde-bg;
+				}
+				@include media-breakpoint-up(md) {
+					&::before{
+						content: "";
+						position: absolute;
+						display: block;
+						height: 2px;
+						width: 100%;
+						top: 0;
+						left: 0;
+						right: 0;
+						background-color: $verde-bg;
+					}
+				}
 			}
 		}
 	}
 	.btn-special{
 		font-weight: 500;
 		text-decoration: none;
+		@include media-breakpoint-between(xs,sm) {
+			margin-top: 3rem;
+		    padding: 1.4rem 1rem 1rem;
+			position: absolute;
+		}
 	}
 }
 a .img-fluid{
@@ -118,6 +155,7 @@ section{
 		background-position: left center;
 		background-size: auto 90%;
 		.title{
+			margin-top: 3rem;
 			margin-bottom: 2rem;
 		}
 		.txt{
@@ -126,26 +164,32 @@ section{
 			}
 		}
 		.deco{
-			width: 58%;
-			height: 15rem;
+			width: 70%;
+			height: 24rem;
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
-			border-top-left-radius: 10rem;
-			border-bottom-left-radius: 10rem;
+			border-top-left-radius: 15rem;
+			border-bottom-left-radius: 15rem;
 			@include media-breakpoint-between(xs,sm) {
 				width: 95%;
+				height: 15rem;
 			}
 		}
 	}
 	&#servicios{
 		.servicios{
 			.col-12{
-				&:nth-child(2){
-					margin-top: 1rem;
+				@include media-breakpoint-up(md) {
+					&:nth-child(2){
+						margin-top: 1rem;
+					}
+					&:nth-child(3){
+						margin-top: -1rem;
+					}
 				}
-				&:nth-child(3){
-					margin-top: -1rem;
+				@include media-breakpoint-between(xs,sm) {
+					margin-top: 1rem;
 				}
 			}
 		}
@@ -210,7 +254,11 @@ section{
 	&#informacion{
 		background-image: url("../img/capa-fondo.jpg");
 		padding-top: 31rem;
-    	background-position: top center;
+    	background-position: 50% -8rem;
+		@include media-breakpoint-between(xs,sm) {
+			padding-top: 13rem;
+			background-position: 50% -9rem;
+		}
 		.green{
 			color: $verde-bg;
 		}
@@ -375,6 +423,89 @@ section{
 				}
 			}			
 		}
+	}
+	&#sobre-nosotros{
+		height: 40vh;
+		padding: 0;
+		.btn-circle{
+			color: $white;
+			background-color: $verde-bg;			
+			border-radius: 10rem;
+			bottom: -2.25rem;
+			font-size: 2rem;
+			width: 4.5rem;
+			height: 4.5rem;
+			padding: 0;
+			left: 0;
+			right: 0;
+			@include media-breakpoint-between(xs,sm) {
+				bottom: -1.5rem;
+				font-size: 1rem;
+				width: 3rem;
+				height: 3rem;
+			}
+			&:hover{
+				color: $black;
+			}
+		}
+		.title{
+			color: $white;
+			small{
+				display: block;
+				font-size: 50%;
+			}
+		}
+		.container{
+			height: 100%;
+		}
+	}
+	&#inspiracion{
+		padding: 6rem 0;
+	}
+	&#nuestra-historia{
+		background-position: center bottom;
+    	background-size: contain;
+		padding: 0 0 6rem;
+		.contenedor{
+			overflow: hidden;
+			.img{
+				width: 100%;
+				@include media-breakpoint-between(xs,sm) {
+					width: 300%;
+				}
+			}
+		}
+		.logo{
+			margin-bottom: 1.5rem;
+		}
+		.cont{
+			margin-bottom: 3rem;
+		}
+		.mini-title{
+			position: relative;
+			margin-bottom: 1rem;
+			&::after{
+				content: "";
+				position: absolute;
+				background-color: $verde-bg;
+				height: 2px;
+				width: 25%;
+				margin: 0 auto;
+				bottom: 2px;
+				left: 0;
+    			right: 0;
+			}
+		}
+		.box{
+			padding: 3.5rem 2rem;
+			border-radius: .8rem;
+			margin-bottom: 1.25rem;
+			background-color: $white;
+		}
+	}
+	&#nuestro-valor{
+		background-color: $gris-bg;
+		padding: 6rem 0;
 	}
 	/*
 	******************************************
