--- a/css/general.css
+++ b/css/general.css
@@ -64,19 +64,20 @@ section#servicios .box .deco { position: absolute; width: 22%; left: 0; top: 10%
 section#servicios .box .deco::before { content: ""; display: block; background-color: #7aa52c; width: 100%; height: .2rem; }
 section#servicios .box .deco::after { content: ""; display: block; width: .6rem; height: .5rem; border-radius: 10rem; background-color: #7aa52c; }
 section#informacion { background-image: url("../img/capa-fondo.jpg"); padding-top: 17rem; padding-bottom: 6rem; background-position: 50% -8rem; }
-@media (max-width: 575.98px) { section#informacion { padding-top: 13rem; background-position: 50% -9rem; padding-bottom: 2rem; } }
+@media (max-width: 575.98px) { section#informacion { padding-top: 9rem; background-position: 50% -1rem; padding-bottom: 2rem; background-size: auto 40%; } }
 section#informacion .green { color: #7aa52c; }
 section#informacion .box { padding: 3.5rem 2rem; border-radius: .8rem; margin-bottom: 1.25rem; background-color: #fff; }
 section#informacion .box .num { position: relative; display: inline-block; }
 section#informacion .box .num::before { content: ""; position: absolute; background-color: #7aa52c; height: 2px; width: 100%; margin: 0 auto; bottom: 2px; }
-@media (max-width: 575.98px) { section#informacion .box .num::before { width: 14%; } }
 section#productos { background-color: #efefef; }
 section#productos .title-big { font-size: 7rem; color: rgba(216, 216, 214, 0.5); font-weight: 700; position: absolute; -webkit-transform: rotate(-90deg) translateY(-50%); transform: rotate(-90deg) translateY(-50%); left: -18rem; top: 50%; text-align: center; -webkit-transform-origin: top center; transform-origin: top center; }
 section#productos .carousel { background-color: #fff; padding: 2rem 0; border-radius: 1rem; }
 section#productos .btn-cat { margin-bottom: -5rem; }
 section#productos .producto .cont { padding: 0 2rem; }
+@media (max-width: 575.98px) { section#productos .producto .cont { padding-top: 3rem; } }
 section#productos .producto .cont .logo-prod { width: 60%; margin-bottom: 1rem; }
 @media (max-width: 575.98px) { section#productos .producto .cont .logo-prod { margin-top: 1rem; } }
+@media (max-width: 575.98px) { section#productos .producto .col-md-7.order-1 { padding-bottom: 2rem; } }
 section#productos .producto .tag { color: #fff; background-color: #000; padding: 1.2rem 3rem 1rem 1rem; position: absolute; border-bottom-right-radius: 10rem; border-top-right-radius: 10rem; }
 section#productos .producto .prod { width: 100%; border-top-left-radius: 15rem; border-bottom-left-radius: 15rem; border-top-right-radius: 15rem; border-bottom-right-radius: 5rem; }
 @media (max-width: 575.98px) { section#productos .producto .txt { margin-bottom: 2rem; } }
@@ -113,12 +114,12 @@ section#nuestra-historia .contenedor .img { width: 100%; }
 @media (max-width: 575.98px) { section#nuestra-historia .contenedor .img { width: 300%; } }
 section#nuestra-historia .logo { margin-bottom: 1.5rem; }
 section#nuestra-historia .cont { margin-bottom: 3rem; }
-section#nuestra-historia .mini-title { position: relative; margin-bottom: 1rem; }
-section#nuestra-historia .mini-title::after { content: ""; position: absolute; background-color: #7aa52c; height: 2px; width: 25%; margin: 0 auto; bottom: 2px; left: 0; right: 0; }
+section#nuestra-historia .mini-title { position: relative; margin-bottom: 1rem; display: inline-block; }
+section#nuestra-historia .mini-title::after { content: ""; position: absolute; background-color: #7aa52c; height: 2px; width: 100%; margin: 0 auto; bottom: 2px; left: 0; right: 0; }
 section#nuestra-historia .box { padding: 3.5rem 2rem; border-radius: .8rem; margin-bottom: 1.25rem; background-color: #fff; }
 section#nuestro-valor { background-color: #efefef; padding: 6rem 0; }
 
-#contacto { font-size: .8rem; padding-top: 5rem; padding-bottom: 18rem; background-position: center bottom; background-size: 100% auto; background-repeat: no-repeat; }
+#contacto { font-size: .7rem; line-height: 1; padding-top: 5rem; padding-bottom: 18rem; background-position: center bottom; background-size: 100% auto; background-repeat: no-repeat; }
 @media (max-width: 575.98px) { #contacto { padding-top: 3rem; padding-bottom: 4rem; } }
 #contacto .footer-logo { width: 30%; margin-bottom: 1rem; }
 #contacto .mini-title { margin-bottom: 1rem; display: block; }
@@ -127,5 +128,6 @@ section#nuestro-valor { background-color: #efefef; padding: 6rem 0; }
 #contacto .min-logo::before { content: ""; position: absolute; height: 2px; width: 10%; background-color: #d8d8d6; top: 0; left: 0; }
 #contacto .list-group { border: 0; margin: 1rem 0; }
 #contacto .list-group .list-group-item { padding: 0; border: none; }
+@media (max-width: 575.98px) { #contacto .list-group .list-group-item { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; } }
 
 /*# sourceMappingURL=general.css.map */
